exports[`ethereum send transfer integration test Send all bat token to second portfolio 1`] = `
{
  "1_amount": "4.42277112 BAT",
  "2_txId": "0x74ade9381d987ff68d7aa3cc48b58ce1fa939409111696eb72cb0863a97965f7",
  "3_txRawHex": "02f8b001138477359400851176592e00828aa9940d8775f648430679a709e98d2b0cb6250d2887ef80b844a9059cbb000000000000000000000000f6c138c36341138ddfc314a11038da8264b7ef090000000000000000000000000000000000000000000000003d60d6e69a74e000c001a0daf2309edfcc976dbed79c170f08e61054f8851483ab878f75b9ef716e98466ca00c0df65c8ec604bcf6003fb3726d2c2ed49e51c3f90a24b7c04184d3cdf8efbe",
  "4_tx": {
    "coinAmount": "-4.42277112 BAT",
    "coinName": "bat",
    "confirmations": 0,
    "currencies": {
      "bat": {
        "BAT": 18,
        "base": 0,
      },
      "ethereum": {
        "ETH": 18,
        "Gwei": 9,
        "Kwei": 3,
        "Mwei": 6,
        "finney": 15,
        "szabo": 12,
        "wei": 0,
      },
    },
    "data": {
      "gasLimit": 35497,
      "nonce": 19,
      "replacedTxId": undefined,
      "tipGasPrice": "2000000000",
    },
    "date": "SOME DATE",
    "feeAmount": "0.002662275 ETH",
    "feeCoinName": "ethereum",
    "to": "0xf6c138C36341138dDFC314a11038dA8264B7Ef09",
    "txId": "0x74ade9381d987ff68d7aa3cc48b58ce1fa939409111696eb72cb0863a97965f7",
    "version": 1,
  },
  "5_beforeBalances": {
    "exodus_0": {
      "bat": {
        "balance": "4.42277112 BAT",
        "spendable": "4.42277112 BAT",
        "spendableBalance": "4.42277112 BAT",
        "staked": "0 BAT",
        "total": "4.42277112 BAT",
        "unconfirmedReceived": "0 BAT",
        "unconfirmedSent": "0 BAT",
        "unstaked": "0 BAT",
        "unstaking": "0 BAT",
      },
      "ethereum": {
        "balance": "0.004228230740891449 ETH",
        "spendable": "0.004228230740891449 ETH",
        "spendableBalance": "0.004228230740891449 ETH",
        "staked": "0 ETH",
        "total": "0.004228230740891449 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
    "exodus_1": {
      "bat": {
        "balance": "0 BAT",
        "spendable": "0 BAT",
        "spendableBalance": "0 BAT",
        "staked": "0 BAT",
        "total": "0 BAT",
        "unconfirmedReceived": "0 BAT",
        "unconfirmedSent": "0 BAT",
        "unstaked": "0 BAT",
        "unstaking": "0 BAT",
      },
      "ethereum": {
        "balance": "0.005932010192264297 ETH",
        "spendable": "0.005932010192264297 ETH",
        "spendableBalance": "0.005932010192264297 ETH",
        "staked": "0 ETH",
        "total": "0.005932010192264297 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
  },
  "6_afterBalances": {
    "exodus_0": {
      "bat": {
        "balance": "0 BAT",
        "spendable": "0 BAT",
        "spendableBalance": "0 BAT",
        "staked": "0 BAT",
        "total": "0 BAT",
        "unconfirmedReceived": "0 BAT",
        "unconfirmedSent": "4.42277112 BAT",
        "unstaked": "0 BAT",
        "unstaking": "0 BAT",
      },
      "ethereum": {
        "balance": "0.001565955740891449 ETH",
        "spendable": "0.001565955740891449 ETH",
        "spendableBalance": "0.001565955740891449 ETH",
        "staked": "0 ETH",
        "total": "0.001565955740891449 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0.002662275 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
    "exodus_1": {
      "bat": {
        "balance": "0 BAT",
        "spendable": "0 BAT",
        "spendableBalance": "0 BAT",
        "staked": "0 BAT",
        "total": "0 BAT",
        "unconfirmedReceived": "0 BAT",
        "unconfirmedSent": "0 BAT",
        "unstaked": "0 BAT",
        "unstaking": "0 BAT",
      },
      "ethereum": {
        "balance": "0.005932010192264297 ETH",
        "spendable": "0.005932010192264297 ETH",
        "spendableBalance": "0.005932010192264297 ETH",
        "staked": "0 ETH",
        "total": "0.005932010192264297 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
  },
}
`;

exports[`ethereum send transfer integration test Send all eth from first to second portolio 1`] = `
{
  "1_amount": "0.004228230740891449 ETH",
  "2_txId": "0x2a555934e85ad6a510df81d94362a6f12a9adbff7aa657ee9f62f40f2f4b23f3",
  "3_txRawHex": "02f87201138477359400851176592e0082520894f6c138c36341138ddfc314a11038da8264b7ef09870f058daf56d73980c080a0bd785c23ae7b196d55643ac04f2e4088b67cc30abcdf2b8845d26c3c4ff04d23a043e13a2101d6d2e7c26b86ebb650a394e09ce9bf0dce5831ab4a644cc0619384",
  "4_tx": {
    "coinAmount": "-0.004228230740891449 ETH",
    "coinName": "ethereum",
    "confirmations": 0,
    "currencies": {
      "ethereum": {
        "ETH": 18,
        "Gwei": 9,
        "Kwei": 3,
        "Mwei": 6,
        "finney": 15,
        "szabo": 12,
        "wei": 0,
      },
    },
    "data": {
      "gasLimit": 21000,
      "nonce": 19,
      "replacedTxId": undefined,
      "tipGasPrice": "2000000000",
    },
    "date": "SOME DATE",
    "feeAmount": "0.001575 ETH",
    "feeCoinName": "ethereum",
    "to": "0xf6c138C36341138dDFC314a11038dA8264B7Ef09",
    "txId": "0x2a555934e85ad6a510df81d94362a6f12a9adbff7aa657ee9f62f40f2f4b23f3",
    "version": 1,
  },
  "5_beforeBalances": {
    "exodus_0": {
      "ethereum": {
        "balance": "0.004228230740891449 ETH",
        "spendable": "0.004228230740891449 ETH",
        "spendableBalance": "0.004228230740891449 ETH",
        "staked": "0 ETH",
        "total": "0.004228230740891449 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
    "exodus_1": {
      "ethereum": {
        "balance": "0.005932010192264297 ETH",
        "spendable": "0.005932010192264297 ETH",
        "spendableBalance": "0.005932010192264297 ETH",
        "staked": "0 ETH",
        "total": "0.005932010192264297 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
  },
  "6_afterBalances": {
    "exodus_0": {
      "ethereum": {
        "balance": "0 ETH",
        "spendable": "0 ETH",
        "spendableBalance": "0 ETH",
        "staked": "0 ETH",
        "total": "0 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0.005803230740891449 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
    "exodus_1": {
      "ethereum": {
        "balance": "0.005932010192264297 ETH",
        "spendable": "0.005932010192264297 ETH",
        "spendableBalance": "0.005932010192264297 ETH",
        "staked": "0 ETH",
        "total": "0.005932010192264297 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
  },
}
`;

exports[`ethereum send transfer integration test Send some bat token to second portfolio 1`] = `
{
  "1_amount": "22771120000000000 base",
  "2_txId": "0x046828a0a37cbb9ec11d90571246418a25fea845ff17f174e4e60b9d3958a0a1",
  "3_txRawHex": "02f8b001138477359400851176592e00828aa9940d8775f648430679a709e98d2b0cb6250d2887ef80b844a9059cbb000000000000000000000000f6c138c36341138ddfc314a11038da8264b7ef090000000000000000000000000000000000000000000000000050e63686bce000c080a0dd572524b33a1fa59c72449a0dceec26925333ed5952ab778492c8150386c15ca057d52d26aae373f2719576a04c43ae88f64ae5a0d941371211deeb46189b66b5",
  "4_tx": {
    "coinAmount": "-0.02277112 BAT",
    "coinName": "bat",
    "confirmations": 0,
    "currencies": {
      "bat": {
        "BAT": 18,
        "base": 0,
      },
      "ethereum": {
        "ETH": 18,
        "Gwei": 9,
        "Kwei": 3,
        "Mwei": 6,
        "finney": 15,
        "szabo": 12,
        "wei": 0,
      },
    },
    "data": {
      "gasLimit": 35497,
      "nonce": 19,
      "replacedTxId": undefined,
      "tipGasPrice": "2000000000",
    },
    "date": "SOME DATE",
    "feeAmount": "0.002662275 ETH",
    "feeCoinName": "ethereum",
    "to": "0xf6c138C36341138dDFC314a11038dA8264B7Ef09",
    "txId": "0x046828a0a37cbb9ec11d90571246418a25fea845ff17f174e4e60b9d3958a0a1",
    "version": 1,
  },
  "5_beforeBalances": {
    "exodus_0": {
      "bat": {
        "balance": "4.42277112 BAT",
        "spendable": "4.42277112 BAT",
        "spendableBalance": "4.42277112 BAT",
        "staked": "0 BAT",
        "total": "4.42277112 BAT",
        "unconfirmedReceived": "0 BAT",
        "unconfirmedSent": "0 BAT",
        "unstaked": "0 BAT",
        "unstaking": "0 BAT",
      },
      "ethereum": {
        "balance": "0.004228230740891449 ETH",
        "spendable": "0.004228230740891449 ETH",
        "spendableBalance": "0.004228230740891449 ETH",
        "staked": "0 ETH",
        "total": "0.004228230740891449 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
    "exodus_1": {
      "bat": {
        "balance": "0 BAT",
        "spendable": "0 BAT",
        "spendableBalance": "0 BAT",
        "staked": "0 BAT",
        "total": "0 BAT",
        "unconfirmedReceived": "0 BAT",
        "unconfirmedSent": "0 BAT",
        "unstaked": "0 BAT",
        "unstaking": "0 BAT",
      },
      "ethereum": {
        "balance": "0.005932010192264297 ETH",
        "spendable": "0.005932010192264297 ETH",
        "spendableBalance": "0.005932010192264297 ETH",
        "staked": "0 ETH",
        "total": "0.005932010192264297 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
  },
  "6_afterBalances": {
    "exodus_0": {
      "bat": {
        "balance": "4.4 BAT",
        "spendable": "4.4 BAT",
        "spendableBalance": "4.4 BAT",
        "staked": "0 BAT",
        "total": "4.4 BAT",
        "unconfirmedReceived": "0 BAT",
        "unconfirmedSent": "0.02277112 BAT",
        "unstaked": "0 BAT",
        "unstaking": "0 BAT",
      },
      "ethereum": {
        "balance": "0.001565955740891449 ETH",
        "spendable": "0.001565955740891449 ETH",
        "spendableBalance": "0.001565955740891449 ETH",
        "staked": "0 ETH",
        "total": "0.001565955740891449 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0.002662275 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
    "exodus_1": {
      "bat": {
        "balance": "0 BAT",
        "spendable": "0 BAT",
        "spendableBalance": "0 BAT",
        "staked": "0 BAT",
        "total": "0 BAT",
        "unconfirmedReceived": "0 BAT",
        "unconfirmedSent": "0 BAT",
        "unstaked": "0 BAT",
        "unstaking": "0 BAT",
      },
      "ethereum": {
        "balance": "0.005932010192264297 ETH",
        "spendable": "0.005932010192264297 ETH",
        "spendableBalance": "0.005932010192264297 ETH",
        "staked": "0 ETH",
        "total": "0.005932010192264297 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
  },
}
`;

exports[`ethereum send transfer integration test Send some eth from first to second portolio 1`] = `
{
  "1_amount": "140891449 wei",
  "2_txId": "0x8af684d65d6b5d9cef39dd41e05258818aced558becdac4fda669cd987cf8a02",
  "3_txRawHex": "02f86f01138477359400851176592e0082520894f6c138c36341138ddfc314a11038da8264b7ef09840865d53980c080a0c3679dba9dd9bbbfa8bf50fee1b7fa5447f00acacab09a957d5d05a2730d9ef2a023797ce6809670cdf2e5047ecec59a17bf156225489f6e54989b99337e7ee231",
  "4_tx": {
    "coinAmount": "-0.000000000140891449 ETH",
    "coinName": "ethereum",
    "confirmations": 0,
    "currencies": {
      "ethereum": {
        "ETH": 18,
        "Gwei": 9,
        "Kwei": 3,
        "Mwei": 6,
        "finney": 15,
        "szabo": 12,
        "wei": 0,
      },
    },
    "data": {
      "gasLimit": 21000,
      "nonce": 19,
      "replacedTxId": undefined,
      "tipGasPrice": "2000000000",
    },
    "date": "SOME DATE",
    "feeAmount": "0.001575 ETH",
    "feeCoinName": "ethereum",
    "to": "0xf6c138C36341138dDFC314a11038dA8264B7Ef09",
    "txId": "0x8af684d65d6b5d9cef39dd41e05258818aced558becdac4fda669cd987cf8a02",
    "version": 1,
  },
  "5_beforeBalances": {
    "exodus_0": {
      "ethereum": {
        "balance": "0.004228230740891449 ETH",
        "spendable": "0.004228230740891449 ETH",
        "spendableBalance": "0.004228230740891449 ETH",
        "staked": "0 ETH",
        "total": "0.004228230740891449 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
    "exodus_1": {
      "ethereum": {
        "balance": "0.005932010192264297 ETH",
        "spendable": "0.005932010192264297 ETH",
        "spendableBalance": "0.005932010192264297 ETH",
        "staked": "0 ETH",
        "total": "0.005932010192264297 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
  },
  "6_afterBalances": {
    "exodus_0": {
      "ethereum": {
        "balance": "0.0026532306 ETH",
        "spendable": "0.0026532306 ETH",
        "spendableBalance": "0.0026532306 ETH",
        "staked": "0 ETH",
        "total": "0.0026532306 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0.001575000140891449 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
    "exodus_1": {
      "ethereum": {
        "balance": "0.005932010192264297 ETH",
        "spendable": "0.005932010192264297 ETH",
        "spendableBalance": "0.005932010192264297 ETH",
        "staked": "0 ETH",
        "total": "0.005932010192264297 ETH",
        "unconfirmedReceived": "0 ETH",
        "unconfirmedSent": "0 ETH",
        "unstaked": "0 ETH",
        "unstaking": "0 ETH",
      },
    },
  },
}
`;
